[metadata]
long_description = file: README.rst, CHANGES.rst
keywords = jtypes, jt, jpype, jep, pyjnius, jpy, javabridge, pyjava, jcc,
           py4j, jython, java, pythonjava
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Natural Language :: Polish
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: Stackless
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Java
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Java Libraries

[options]
python_requires = >=2.7.0,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
setup_requires =
    setuptools>=39.2.0
install_requires =
    setuptools>=39.2.0
    typing;python_version<'3.5'
    configparser;python_version<'3.0'
    py-cpuinfo
    jtypes.jni
namespace_packages = jt
packages = find:
package_dir =
    = src
    # jt.jvm.tests = tests
zip_safe = True

[options.packages.find]
where = src

[options.package_data]
jt = lic.key
jt.jvm.java = lib/*
jt.jvm.java.com.jt.util = classlist_*.txt
jt.jvm.java.org.python = version.properties
jt.jvm.java.org.python.util = PythonInterpreter-*.*

[options.extras_require]
doc =
    Sphinx>=1.7.8
test =
    unittest2;python_version<'3.0'
    mock>=2.0.0;python_version<'3.0'

[sdist]
formats = zip

[bdist_wheel]
universal = True

[build_sphinx]
source-dir = docs
build-dir = docs/_build
builder = html
all_files = True
warning-is-error = True
